<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/settings_activity_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_settings"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="@style/AppBarOverlay"
        android:elevation="4dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/PopupOverlay"
            style="@style/ActionBarTheme"
            app:title="@string/settings"
             />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/save_settings_btn"
        android:layout_below="@id/appbar_settings"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bg_color_settings"
                android:textSize="16sp"
                android:textColor="@color/purple_500"
                android:layout_marginBottom="6dp"/>

            <Spinner
                android:id="@+id/bg_col_spinner"
                android:entries="@array/colors_array"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_size_settings"
                android:textSize="16sp"
                android:textColor="@color/purple_500"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp" />

            <Spinner
                android:id="@+id/text_size_spinner"
                android:entries="@array/text_size_array"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:minHeight="48dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/save_settings_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp">

    </Button>

</RelativeLayout>
