<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_main"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="@style/AppBarOverlay"
        android:elevation="4dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/PopupOverlay"
            style="@style/ActionBarTheme"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_main"
        android:layout_above="@id/settings_btn">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/purple_500"
                        android:layout_margin="20dp"/>

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/ic_android"
                        android:contentDescription="@string/app_name"
                        app:tint="@color/purple_500" />

                    <TextView
                        android:id="@+id/text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_message"
                        android:textSize="14sp"
                        android:justificationMode="inter_word"
                        android:layout_margin="20dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/settings"
        android:layout_alignParentBottom="true">
    </Button>

</RelativeLayout>


